--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <div class="row" id="footer">
         <div class="col-lg-12">Toure Cheikh, Vendeville Antoine, Degni Rhizlaine, Baud Florian - All rights reserved. 
-            <a href="https://github.com/ClimateEventUS/climateeventus.github.io">GitHub repository</a> - 
+            <a href="https://github.com/ClimateEventUS/climateeventus.github.io">Git repository</a> - 
             <a href="https://lyondataviz.github.io/teaching/lyon1-m2/2018/">DataViz</a> - 
             <a href="https://www.univ-lyon1.fr/">Claude Bernard University (Lyon 1)</a> - 
             <a href="http://mastermas.univ-lyon1.fr/">M2 Data Science</a> 
