--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <a href="https://github.com/ClimateEventUS/climateeventus.github.io">Git repository</a> - 
             <a href="https://lyondataviz.github.io/teaching/lyon1-m2/2018/">DataViz</a> - 
             <a href="https://www.univ-lyon1.fr/">Claude Bernard University (Lyon 1)</a> - 
-            <a href="http://mastermas.univ-lyon1.fr/">M2 Data Science</a> 
+            <a href="http://mastermas.univ-lyon1.fr/index.php/page1-2/">M2 Data Science</a> 
         </div>
     </div>
 
